k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: renqin-app
  labels:
    app: renqin-app
spec:
  replicas: 1
  strategy:
    type: Recreate  # 先删旧 Pod，再建新 Pod，避免端口冲突
  selector:
    matchLabels:
      app: renqin-app
  template:
    metadata:
      labels:
        app: renqin-app
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: renqin-app
          image: REGISTRY_URL/IMAGE_NAME:TAG
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
      hostNetwork: true  # 让 Pod 直接使用主机的 IP 和端口
      dnsPolicy: ClusterFirstWithHostNet # 保证 Pod 还能解析集群内服务
