k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: renqin-app
spec:
  selector:
    app: renqin-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
